<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint_layout1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:textColor="#000"
            android:hint="GPA Calculator"
            android:textSize="20sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvCourse1"
            app:layout_constraintVertical_bias=".2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCourse1"
            android:textSize="17sp"
            android:paddingLeft="20dp"
            android:text="@string/lblCourse1"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout1"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvCourse1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvCourse2"
            android:id="@+id/layout1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/tbCourse1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCourse2"
            android:hint="@string/lblCourse2"
            android:paddingLeft="20dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/layout1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout2"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCourse2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvCourse3"
            android:id="@+id/layout2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/tbCourse2"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCourse3"
            android:hint="@string/lblCourse3"
            android:paddingLeft="20dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/layout2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout3"
            app:layout_constraintVertical_bias=".2" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvCourse3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvCourse4"
            android:id="@+id/layout3">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/tbCourse3"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCourse4"
            android:hint="@string/lblCourse4"
            android:paddingLeft="20dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/layout3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout4"
            app:layout_constraintVertical_bias=".2" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvCourse4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvCourse5"
            android:id="@+id/layout4"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/tbCourse4"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCourse5"
            android:hint="@string/lblCourse5"
            android:paddingLeft="20dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/layout4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout5"
            app:layout_constraintVertical_bias=".2" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvCourse5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/gpa_button"
            android:id="@+id/layout5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/tbCourse5"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/gpa_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculateGPA"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/lblButton"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout5"
            app:layout_constraintVertical_bias=".2" />

<!--        <Button-->
<!--            android:id="@+id/gpa_button"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/layout5"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintBottom_toTopOf="parent"-->
<!--            android:text="Calculate GPA"-->
<!--            />-->
    </androidx.constraintlayout.widget.ConstraintLayout>







</ScrollView>